--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -506,13 +506,13 @@
                           <th>Description</th>
                           <th>Requested By</th>
                           <th>Total Prepared Item(s)</th>
-                          <th>Total Item(s)</th>
+                          <th>Total Reject Item(s)</th>
                           <th class="text-center">Action</th>
                       </tr>
                   </thead>
                   <tbody>
                       <tr
-                          *ngFor="let item of CancelledOrderList | filter: searchBy : searchText | paging : currentPageIndex : pageSize; let i = index">
+                          *ngFor="let item of CancelledOrderList | filter: searchBy : searchText | paging : currentPageIndexCancelledOrder : pageSize; let i = index">
                           <td>{{item.is_approved_prepa_date | date: "MM/dd/yyyy" }}</td>
                           <td>{{item.department_name}}</td>
                           <td>{{item.mrs_req_desc}}</td>
@@ -520,11 +520,17 @@
                           <td>{{item.totalPreparedItems | number}}</td>
                           <td>{{item.totalRejectItems | number}}</td>
                           <td class="text-center">
-                            <button mat-icon-button color="black" (click)="onEditClick($event, i)"
+                            <!-- <button mat-icon-button color="black" (click)="onEditClick($event, i)"
                               data-toggle="modal" data-target="#editModal" data-backdrop="false" title="View"
                               data-keyboard="false">
                               <mat-icon>remove_red_eye</mat-icon>
-                            </button>&nbsp;
+                            </button>&nbsp; -->
+                            <button (click)="onApproveClick(item)" data-toggle="modal" data-target="#preparedOrderCancelModal"
+                            data-backdrop="false" title="Edit" data-keyboard="false" class="editbtnStyle" color="success"
+                            mat-stroked-button>
+                            <span class="fa fa-eye"></span> View
+                          </button>
+
                           </td>
                       </tr>
                   </tbody>
@@ -536,51 +542,51 @@
           <!-- pagination -->
           <div class="col-md-12">
             <ul class="pagination paginationStyle justify-content-center mt-1">
-              <li class="page-item" (click)="onPageIndexClicked(currentPageIndex - 1)">
+              <li class="page-item" (click)="onPageIndexClickedCancelledOrder(currentPageIndexCancelledOrder - 1)">
                   <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
                       onclick="return false">Prev</a>
               </li>
 
-              <ng-container *ngIf="pages.length <= 10">
-                  <li class="page-item" *ngFor="let page of pages"
-                      [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndex}"
-                      (click)="onPageIndexClicked(page.pageIndex)">
+              <ng-container *ngIf="pagesCancelledTransaction.length <= 10">
+                  <li class="page-item" *ngFor="let page of pagesCancelledTransaction"
+                      [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexCancelledOrder}"
+                      (click)="onPageIndexClickedCancelledOrder(page.pageIndex)">
                       <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
                   </li>
               </ng-container>
 
-              <ng-container *ngIf="pages.length > 10">
-                  <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 0}"
-                      (click)="onPageIndexClicked(0)">
+              <ng-container *ngIf="pagesCancelledTransaction.length > 10">
+                  <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelledOrder == 0}"
+                      (click)="onPageIndexClickedCancelledOrder(0)">
                       <a class="page-link" href="#" onclick="return false">1</a>
                   </li>
 
-                  <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 1}"
-                      (click)="onPageIndexClicked(1)">
+                  <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelledOrder == 1}"
+                      (click)="onPageIndexClickedCancelledOrder(1)">
                       <a class="page-link" href="#" onclick="return false">2</a>
                   </li>
 
-                  <li *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">&nbsp;...&nbsp;</li>
+                  <li *ngIf="currentPageIndexCancelledOrder > 1 && currentPageIndexCancelledOrder < pagesCancelledTransaction.length - 2">&nbsp;...&nbsp;</li>
 
-                  <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClicked(currentPageIndex)"
-                      *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
-                      <a class="page-link" href="#" onclick="return false">{{currentPageIndex + 1}}</a>
+                  <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClickedCancelledOrder(currentPageIndexCancelledOrder)"
+                      *ngIf="currentPageIndexCancelledOrder > 1 && currentPageIndexCancelledOrder < pagesCancelledTransaction.length - 2">
+                      <a class="page-link" href="#" onclick="return false">{{currentPageIndexCancelledOrder + 1}}</a>
                   </li>
 
                   <li>&nbsp;...&nbsp;</li>
 
-                  <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == pages.length - 2}"
-                      (click)="onPageIndexClicked(pages.length - 2)">
-                      <a class="page-link" href="#" onclick="return false">{{pages.length - 1}}</a>
+                  <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelledOrder == pagesCancelledTransaction.length - 2}"
+                      (click)="onPageIndexClickedCancelledOrder(pagesCancelledTransaction.length - 2)">
+                      <a class="page-link" href="#" onclick="return false">{{pagesCancelledTransaction.length - 1}}</a>
                   </li>
 
-                  <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == pages.length - 1}"
-                      (click)="onPageIndexClicked(pages.length - 1)">
-                      <a class="page-link" href="#" onclick="return false">{{pages.length}}</a>
+                  <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelledOrder == pagesCancelledTransaction.length - 1}"
+                      (click)="onPageIndexClickedCancelledOrder(pagesCancelledTransaction.length - 1)">
+                      <a class="page-link" href="#" onclick="return false">{{pagesCancelledTransaction.length}}</a>
                   </li>
               </ng-container>
 
-              <li class="page-item" (click)="onPageIndexClicked(currentPageIndex + 1)">
+              <li class="page-item" (click)="onPageIndexClickedCancelledOrder(currentPageIndexCancelledOrder + 1)">
                   <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
                       onclick="return false">Next</a>
               </li>
@@ -752,6 +758,160 @@
 
 
 
+
+<!-- Cancelled Modal -->
+<form [formGroup]="approvalForm" novalidate="novalidate" appClientLocationStatusValidator>
+  <div class="modal" role="dialog" id="preparedOrderCancelModal" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content" style="width: auto;">
+        <div class="modal-header bg-all">
+          <div class="modal-title white-color">Prepared Orders Cancelled</div>
+          <button type="button" class="close" data-dismiss="modal" (click)="CloseViewOrderRedirectToInternalOrder()"  #closeAddExpenseModal><span>&times;</span></button>
+        </div>
+        <div class="modal-body">
+          <mat-card class="text-bold">Internal Information
+          </mat-card><br>
+
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <mat-form-field floatLabel="auto" class="w-100" appearance="outline" color="primary">
+                <input type="text" class="text-color" matInput formControlName="prep_date" readonly="readonly">
+                <mat-label>Preparation Date</mat-label>
+              </mat-form-field>
+            </div>
+            <div class="form-group col-md-4">
+              <mat-form-field floatLabel="auto" class="w-100" appearance="outline" color="primary">
+                <input type="text" class="text-color" matInput formControlName="mrs_req_desc" readonly="readonly">
+                <mat-label>Description</mat-label>
+              </mat-form-field>
+            </div>
+            <div class="form-group col-md-4">
+              <mat-form-field floatLabel="auto" class="w-100" appearance="outline" color="primary">
+                <input type="text" class="text-color" matInput formControlName="department_name" readonly="readonly">
+                <mat-label>Department Name</mat-label>
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <mat-form-field floatLabel="auto" class="w-100" appearance="outline" color="primary">
+                <input type="text" matInput class="text-color" readonly="readonly" name="route" formControlName="mrs_requested_by">
+                <mat-label>Requested By</mat-label>
+              </mat-form-field>
+            </div>
+            <div class="form-group col-md-4">
+              <mat-form-field floatLabel="auto" class="w-100" appearance="outline" color="primary">
+                <input type="text" matInput class="text-color" readonly="readonly" formControlName="mrs_requested_date">
+                <mat-label>Requested Date</mat-label>
+              </mat-form-field>
+            </div>
+            <div class="form-group col-md-4">
+              <mat-form-field floatLabel="auto" class="w-100" appearance="outline" color="primary">
+                <input type="text" class="text-color" matInput readonly="readonly" formControlName="recieving_date">
+                <mat-label>Receiving Date</mat-label>
+              </mat-form-field>
+            </div>
+          </div>
+
+          <mat-form-field floatLabel="auto" appearance="outline" color="primary" [hidden]="true">
+            <input type="text" class="text-color" matInput readonly="readonly" formControlName="id">
+            <mat-label>id</mat-label>
+          </mat-form-field>
+
+          <mat-form-field floatLabel="auto" appearance="outline" color="primary" [hidden]="true">
+            <input type="text" class="text-color" matInput readonly="readonly" formControlName="Is_wh_approved">
+            <mat-label>Is_wh_approved</mat-label>
+          </mat-form-field>
+
+          <mat-form-field floatLabel="auto" appearance="outline" color="primary" [hidden]="true">
+            <input type="text" class="text-color" matInput readonly="readonly" formControlName="Is_wh_approved_by">
+            <mat-label>Is_wh_approved_by</mat-label>
+          </mat-form-field>
+
+          <mat-form-field floatLabel="auto" appearance="outline" color="primary" [hidden]="true">
+            <input type="text" class="text-color" matInput readonly="readonly" formControlName="Is_wh_approved_date">
+            <mat-label>Is_wh_approved_date</mat-label>
+          </mat-form-field>
+
+          <mat-form-field floatLabel="auto" appearance="outline" color="primary" [hidden]="true">
+            <input type="text" class="text-color" matInput readonly="readonly"
+              formControlName="Wh_checker_move_order_no">
+            <mat-label>Wh_checker_move_order_no</mat-label>
+          </mat-form-field>
+
+
+
+          <div class="flex">
+            <div class="box-1">
+              <mat-card class="text-bold">Recieving Information </mat-card>
+            </div>
+            <div class="box-2">
+              <mat-card class="text-bold">Move Order No. {{totalStoreOrderDispatching}}</mat-card>
+            </div>
+          </div>
+
+          <div class="flex">
+            <div class="box-1">
+              <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width: 100%"
+                id="GridView2">
+                <thead>
+                  <tr>
+                    <!-- <th>Parent</th> -->
+                    <th>ID</th>
+                    <th>Description</th>
+                    <th>Uom</th>
+                    <th>Serve</th>
+                    <th class="hideObject">Total Items</th>
+                    <th class="text-center">Action</th>
+                  </tr>
+                </thead>
+
+                <tbody>
+                  <tr *ngFor="let item of itemList">
+                    <!-- <td>{{item.fK_dry_wh_orders_parent_id}}</td> -->
+                    <td>{{item.id}}</td>
+                    <td>{{item.mrs_item_description}}</td>
+                    <td>{{item.mrs_uom}}</td>
+                    <td>{{item.prepared_allocated_qty | number}}</td>
+                    <td class="hideObject">{{c | number}}</td>
+                    <td class="text-center">
+                
+
+                      <button (click)="onCancelItemClick(item)" data-toggle="modal" data-target="#cancelOrderItemModal"
+                      data-backdrop="false" data-keyboard="false" class="editbtnStyle" color="warn"
+                      mat-stroked-button>
+                      <span class="fa fa-ban"></span> cancel
+                    </button>&nbsp;
+
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+
+            </div>
+          </div>
+        </div>
+        <div>
+        </div>
+
+        <!-- <div class="modal-footer">
+          <button mat-stroked-button color="primary" id="ApproveButton" [hidden]="hideApproveButton" class="mr-2"
+            (click)="approvedOrder()" [disabled]="!approvalForm.valid">Approve</button>
+          <button [hidden]="true" mat-stroked-button color="warn" data-dismiss="modal"
+            id="closeApprovalModal">Cancel</button>
+
+          <ng-container *ngIf="hideApproveButton">
+            <p style="color: red; margin:auto">
+              You can't approve this order, due to cancelled Item/s!
+            </p>
+          </ng-container>
+
+        </div> -->
+      </div>
+    </div>
+  </div>
+</form>
 <!-- Cancel Item -->
 <form [formGroup]="cancelOrderItemForm">
   <div class="modal" role="dialog" id="cancelOrderItemModal" data-backdrop="static" data-keyboard="false">
