--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -69,6 +69,7 @@
               <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain">
                 <table class="table table-striped table-bordered nowrap table-responsive-sm">
                   <tr class="text-light header-bg-color-um system-name">
+                    <th>ID</th>
                       <th>
                           Preparation Date
                           <i class="fa fa-sort hand-icon" *ngIf="sortBy != 'is_approved_prepa_date' "
@@ -91,6 +92,7 @@
 
                   <tr
                       *ngFor="let item of InternalOrderList | filter: searchBy : searchText | sort : sortBy : sortOrder | paging : currentPageIndex : pageSize; let i = index">
+                   <td>{{item.id}}</td>
                       <td>{{item.is_approved_prepa_date | date: "MM/dd/yyyy" }}</td>
                       <td>{{item.department_name}}</td>
                       <td>{{item.mrs_req_desc}}</td>
@@ -172,11 +174,9 @@
                   <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
                 </div>
                 <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchBy">
-                  <option value="is_approved_prepa_date">Preparation Date</option>
-                  <option value="category">Category</option>
-                  <option value="store_name">Store</option>
-                  <option value="route">Route</option>
-                  <option value="area">Area</option>
+                  <option value="is_approved_prepa_date">PREPARATION DATE</option>
+                  <option value="department_name">DEPARTMENT</option>
+                  <option value="mrs_req_desc">DESCRIPTION</option>               
                 </select>
               </div>
             </div>
@@ -199,7 +199,7 @@
                 <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
                   <thead>
                     <tr class="text-light header-bg-color-um system-name">
-
+                      <th>ID</th>
                       <th>Preparation Date</th>
                       <th>Department</th>
                       <th>Description</th>
@@ -213,6 +213,7 @@
                   <tbody>
                     <tr
                       *ngFor="let item of PreparedOrderList | filter: searchBy : searchText | paging : currentPageIndex : pageSize; let i = index">
+                      <td>{{item.id}}</td>
                       <td>{{item.is_approved_prepa_date | date: "MM/dd/yyyy"}}</td>
                       <td>{{item.department_name}}</td>
                       <td>{{item.mrs_req_desc}}</td>
@@ -345,6 +346,7 @@
                 <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width: 100%">
                   <thead>
                     <tr class="text-light header-bg-color-um system-name">
+                      <th>ID</th>
                       <th>Order No.</th>
                       <th>Preparation Date</th>
                       <th>Department</th>
@@ -357,6 +359,7 @@
                   <tbody>
                     <tr
                       *ngFor="let item of DispatchOrderList | filter: searchBy : searchText | paging : currentPageIndexDispatching : pageSize; let i = index">
+                     <td>{{item.id}}</td>
                       <td>{{item.wh_checker_move_order_no | number:'1.0':'en-US'}}</td>
                       <td>{{item.is_approved_prepa_date | date: "MM/dd/yyyy"}}</td>
                       <td>{{item.department_name}}</td>
@@ -993,7 +996,7 @@
         </div>
 
         <div class="modal-footer">
-          <button mat-stroked-button color="accent" id="cancelOrderCloseModal" [hidden]="true" data-dismiss="modal"
+          <button mat-stroked-button color="accent" id="returnOrderCloseModal" [hidden]="true" data-dismiss="modal"
             class="mr-2">Cancel</button>
           <button mat-stroked-button color="warn" class="" data-dismiss="modal" [disabled]="!cancelOrderItemForm.valid"
             (click)="returnOrderItemPartial()">Submit</button>
