--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -174,7 +174,6 @@
                   <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
                 </div>
                 <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchBy">
-                  <option value="is_approved_prepa_date">PREPARATION DATE</option>
                   <option value="department_name">DEPARTMENT</option>
                   <option value="mrs_req_desc">DESCRIPTION</option>               
                 </select>
@@ -186,7 +185,9 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
                 </div>
-                <input type="text" class="form-control" placeholder="Find here...." id="txtSearchText" name="SearchText"
+                <input type="search"
+                autocomplete="off"
+                class="form-control" placeholder="Find here...." id="txtSearchText" name="SearchText"
                   [(ngModel)]="searchText" (keyup)="onSearchPreparedOrder($event)" />
               </div>
             </div>
@@ -319,11 +320,8 @@
                   <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
                 </div>
                 <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchBy">
-                  <option value="is_approved_prepa_date">Preparation Date</option>
-                  <option value="category">Category</option>
-                  <option value="store_name">Storer</option>
-                  <option value="route">Route</option>
-                  <option value="area">Area</option>
+                  <option value="department_name">DEPARTMENT</option>
+                  <option value="mrs_req_desc">DESCRIPTION</option> 
                 </select>
               </div>
             </div>
@@ -333,7 +331,9 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
                 </div>
-                <input type="text" class="form-control" placeholder="Find here...." id="txtSearchText" name="SearchText"
+                <input type="search"
+                autocomplete="off"
+                class="form-control" placeholder="Find here...." id="txtSearchText" name="SearchText"
                   [(ngModel)]="searchText" (keyup)="onSearchDispatchOrders($event)" />
               </div>
             </div>
@@ -465,13 +465,8 @@
                   id="drpSearchBy"
                   name="SearchBy"
                   [(ngModel)]="searchBy">
-                  <option value="is_approved_prepa_date">Preparation Date</option>
-                  <option value="item_code">Item Code</option>
-                  <option value="description">Description</option>
-                  <option value="category">Category</option>
-                  <option value="store_name">Store</option>
-                  <option value="route">Route</option>
-                  <option value="area">Area</option>
+                  <option value="department_name">DEPARTMENT</option>
+                  <option value="mrs_req_desc">DESCRIPTION</option> 
                 </select>
               </div>
             </div>
@@ -484,7 +479,8 @@
                   ></span>
                 </div>
                 <input
-                  type="text"
+                  type="search"
+                  autocomplete="off"
                   class="form-control"
                   placeholder="Find here...."
                   id="txtSearchText"
@@ -504,6 +500,7 @@
                 <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
                   <thead>
                       <tr class="text-light header-bg-color-um system-name">
+                          <th>ID</th>
                           <th>Preparation Date</th>
                           <th>Department</th>
                           <th>Description</th>
@@ -516,6 +513,7 @@
                   <tbody>
                       <tr
                           *ngFor="let item of CancelledOrderList | filter: searchBy : searchText | paging : currentPageIndexCancelledOrder : pageSize; let i = index">
+                         <td>{{item.mrs_id}}</td>
                           <td>{{item.is_approved_prepa_date | date: "MM/dd/yyyy" }}</td>
                           <td>{{item.department_name}}</td>
                           <td>{{item.mrs_req_desc}}</td>
@@ -525,11 +523,16 @@
                           <td class="text-center">
               
                             <button (click)="onViewCancelledClick(item)" data-toggle="modal" data-target="#preparedOrderCancelModal"
-                            data-backdrop="false" title="Edit" data-keyboard="false" class="editbtnStyle" color="success"
+                            data-backdrop="false" title="View" data-keyboard="false" class="editbtnStyle" color="success"
                             mat-stroked-button>
                             <span class="fa fa-eye"></span> View
                           </button>
-
+                          <ng-container *ngIf="item.is_wh_checker_cancel == 1">
+                          <button (click)="onReturnParentPreparationOrderClick(item)"  title="Return" data-keyboard="false" class="editbtnStyle" color="success"
+                          mat-stroked-button>
+                          <span class="fa fa-eye"></span> Return
+                        </button>
+</ng-container>
                           </td>
                       </tr>
                   </tbody>
@@ -1135,20 +1138,42 @@
         <div>
         </div>
 
-        <!-- <div class="modal-footer">
-          <button mat-stroked-button color="primary" id="ApproveButton" [hidden]="hideApproveButton" class="mr-2"
-            (click)="approvedOrder()" [disabled]="!approvalForm.valid">Approve</button>
-          <button [hidden]="true" mat-stroked-button color="warn" data-dismiss="modal"
-            id="closeApprovalModal">Cancel</button>
 
-          <ng-container *ngIf="hideApproveButton">
-            <p style="color: red; margin:auto">
-              You can't approve this order, due to cancelled Item/s!
-            </p>
-          </ng-container>
-
-        </div> -->
       </div>
     </div>
   </div>
+</form>
+
+
+<!-- Cancel Order Parent -->
+<form [formGroup]="cancelOrderForm">
+  <div class="modal" role="dialog" id="cancelOrderModal" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog modal-md">
+      <div class="modal-content" style="width:auto">
+        <div class="modal-header bg-all">
+          <div class="modal-title white-color">Cancel Order Item</div>
+          <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+        </div>
+        <div class="modal-body">
+
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label style="color:red">Reason</mat-label>
+            <mat-select formControlName="Is_wh_checker_cancel_reason">
+              <mat-option *ngFor="let status of CancelPoSummary | async" [value]="status.status_name">
+                {{status.status_name}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        {{cancelOrderForm.value | json}}
+        <div class="modal-footer">
+          <button mat-stroked-button color="accent" id="cancelOrderCloseModal" [hidden]="true" data-dismiss="modal"
+            class="mr-2">Cancel</button>
+          <button mat-stroked-button color="warn" class="" data-dismiss="modal" [disabled]="!cancelOrderForm.valid"
+            (click)="CancelOrderClick()">Submit</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </form>
