--- a/app/admin/components/projects/projects.component.html
+++ b/app/admin/components/projects/projects.component.html
@@ -201,7 +201,230 @@
 </div>
 
 
+<!-- Add-->
+<form #newForm="ngForm" novalidate="novalidate" appClientLocationStatusValidator>
+  <div class="modal" role="dialog" id="newModal">
+    <div class="modal-dialog">
+      <div class="modal-content" style="width: auto">
+        <div class="modal-header bg-primary text-white">
+          <div class="modal-title">New Projects</div>
+          <button type="button" class="close" data-dismiss="modal">
+            <span>&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group row">
+            <label for="txtNewProjectID" class="col-sm-4 col-form-label">Project ID</label>
+            <div class="col-sm-8">
+              <input type="text" id="txtNewProjectID" style="width: 130px" class="form-control" placeholder="Project ID"
+                name="ProjectID" [(ngModel)]="newProject.projectID" required="required" pattern="^[0-9]*$"
+                appProjectIDUniqueValidator #newProjectID="ngModel" #prjID [ngClass]="{
+                  'is-invalid':
+                    newProjectID.invalid &&
+                    (newProjectID.dirty ||
+                      newProjectID.touched ||
+                      newForm.submitted),
+                  'is-valid':
+                    newProjectID.valid &&
+                    (newProjectID.dirty ||
+                      newProjectID.touched ||
+                      newForm.submitted)
+                }" />
 
+              <span class="text-danger" *ngIf="
+                  newProjectID.invalid &&
+                  (newProjectID.dirty ||
+                    newProjectID.touched ||
+                    newForm.submitted) &&
+                  newProjectID.errors?.required
+                ">Project ID can't be blank</span>
+
+              <span class="text-danger" *ngIf="
+                  newProjectID.invalid &&
+                  (newProjectID.dirty ||
+                    newProjectID.touched ||
+                    newForm.submitted) &&
+                  newProjectID.errors?.pattern
+                ">Project ID should contain numbers only</span>
+
+              <span class="text-danger" *ngIf="
+                  newProjectID.invalid &&
+                  (newProjectID.dirty ||
+                    newProjectID.touched ||
+                    newForm.submitted) &&
+                  newProjectID.errors?.uniqueProjectID
+                ">Duplicate Project ID</span>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="txtNewProjectID" class="col-sm-4 col-form-label">Is Activated</label>
+            <div class="col-sm-8">
+              <input type="text" style="width: auto" class="form-control" name="is_activated" value="1"
+                [(ngModel)]="newProject.is_activated" #newis_activated="ngModel" #IsActivated />
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="txtNewProjectName" class="col-sm-4 col-form-label">Project Name</label>
+            <div class="col-sm-8">
+              <input type="text" id="txtNewProjectName" class="form-control" placeholder="Project Name"
+                name="ProjectName" [(ngModel)]="newProject.projectName" required="required" minlength="3" maxlength="30"
+                pattern="^[A-Za-z0-9 /-]*$" #newProjectName="ngModel" [ngClass]="{
+                  'is-invalid':
+                    newProjectName.invalid &&
+                    (newProjectName.dirty ||
+                      newProjectName.touched ||
+                      newForm.submitted),
+                  'is-valid':
+                    newProjectName.valid &&
+                    (newis_activated.dirty ||
+                      newProjectName.touched ||
+                      newForm.submitted)
+                }" />
+
+              <span class="text-danger" *ngIf="
+                  newProjectName.invalid &&
+                  (newProjectName.dirty ||
+                    newProjectName.touched ||
+                    newForm.submitted) &&
+                  newProjectName.errors?.required
+                ">Project Name can't be blank</span>
+
+              <span class="text-danger" *ngIf="
+                  newProjectName.invalid &&
+                  (newProjectName.dirty ||
+                    newProjectName.touched ||
+                    newForm.submitted) &&
+                  newProjectName.errors?.pattern
+                ">Project Name can contain alphabets, digits, dot, hyphen or
+                space only</span>
+
+              <span class="text-danger" *ngIf="
+                  newProjectName.invalid &&
+                  (newProjectName.dirty ||
+                    newProjectName.touched ||
+                    newForm.submitted) &&
+                  newProjectName.errors?.minlength
+                ">Project name should be at least 3 characters long</span>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="txtNewDateOfStart" class="col-sm-4 col-form-label">Date of Starts</label>
+            <div class="col-sm-8">
+              <input type="date" id="txtNewDateOfStart" style="width: 180px" class="form-control"
+                placeholder="Date of Start" name="DateOfStart" [(ngModel)]="newProject.dateOfStart" required="required"
+                #newDateOfStart="ngModel" [ngClass]="{
+                  'is-invalid':
+                    newDateOfStart.invalid &&
+                    (newDateOfStart.dirty ||
+                      newDateOfStart.touched ||
+                      newForm.submitted),
+                  'is-valid':
+                    newDateOfStart.valid &&
+                    (newDateOfStart.dirty ||
+                      newDateOfStart.touched ||
+                      newForm.submitted)
+                }" />
+
+              <span class="text-danger" *ngIf="
+                  newDateOfStart.invalid &&
+                  (newDateOfStart.dirty ||
+                    newDateOfStart.touched ||
+                    newForm.submitted) &&
+                  newDateOfStart.errors?.required
+                ">Date of Start can't be blank</span>
+            </div>
+          </div>
+
+
+
+          <div class="form-group row">
+            <label for="col-sm-4 col-form-label">&nbsp;</label>
+            <div class="col-sm-8">
+              <div class="form-check">
+                <input type="checkbox" id="chkNewActive" value="true" class="form-check-input"
+                  [(ngModel)]="newProject.active" name="active" />
+                <label class="form-check-label" for="chkNewActive">Active</label>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="rbNewStatusInForce" class="col-sm-4">Status</label>
+            <div class="col-sm-8">
+              <div class="form-check form-check-inline">
+                <input type="radio" id="rbNewStatusInForce" value="In Force" class="form-check-input" name="Status"
+                  [(ngModel)]="newProject.status" required="required" #newStatusInForce="ngModel" />
+                <label for="rbNewStatusInForce" class="form-check-label">In Force</label>
+              </div>
+
+              <div class="form-check form-check-inline">
+                <input type="radio" id="rbNewStatusSupport" value="Support" class="form-check-input" name="Status"
+                  [(ngModel)]="newProject.status" required="required" #newStatusSupport="ngModel" />
+                <label for="rbNewStatusSupport" class="form-check-label">Support</label>
+              </div>
+
+              <span class="text-danger" *ngIf="
+                  newStatusInForce.invalid &&
+                  (newStatusInForce.dirty ||
+                    newStatusInForce.touched ||
+                    newForm.submitted) &&
+                  newStatusInForce.errors?.required
+                ">Please select status</span>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="drpNewClientLocation" class="col-sm-4 col-form-label">Client Location</label>
+            <div class="col-sm-8">
+              <select id="drpNewClientLocation" class="form-control" name="ClientLocation"
+                [(ngModel)]="newProject.clientLocationID" required="required" #newClientLocationID="ngModel" [ngClass]="{
+                  'is-invalid':
+                    newClientLocationID.invalid &&
+                    (newClientLocationID.dirty ||
+                      newClientLocationID.touched ||
+                      newForm.submitted),
+                  'is-valid':
+                    newClientLocationID.valid &&
+                    (newClientLocationID.dirty ||
+                      newClientLocationID.touched ||
+                      newForm.submitted)
+                }">
+                <option value="null">Please Select</option>
+                <option *ngFor="let clientLocation of clientLocations | async"
+                  [value]="clientLocation.clientLocationID">
+                  {{ clientLocation.clientLocationName }}
+                </option>
+              </select>
+
+              <span class="text-danger" *ngIf="
+                  newClientLocationID.invalid &&
+                  (newClientLocationID.dirty ||
+                    newClientLocationID.touched ||
+                    newForm.submitted) &&
+                  newClientLocationID.errors?.required
+                ">Please client location</span>
+
+              <span class="text-danger" *ngIf="
+                  newForm.invalid &&
+                  (newForm.dirty || newForm.touched || newForm.submitted) &&
+                  newForm.errors?.clientLocationStatus
+                ">Support projects are not allowed at Tokyo</span>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-warning" data-dismiss="modal" id="newFormCancel">
+            Cancel
+          </button>
+          <button class="btn btn-success" (click)="onSaveClick()">Save</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
 
 <!-- CREATE CHECKLIST -->
 <form #editForm="ngForm" novalidate="novalidate" appClientLocationStatusValidator>
@@ -222,8 +445,7 @@
               <div class="form-group col-md-3">
                 <mat-form-field floatLabel="auto" appearance="outline" color="primary">
                   <input type="text" class="text-green" matInput id="txtEditProjectID" placeholder="Checklist ID"
-                   
-                  name="ProjectID" disabled="disabled" [(ngModel)]="editProject.projectID" required="required"
+                    name="ProjectID" disabled="disabled" [(ngModel)]="editProject.projectID" required="required"
                     pattern="^[0-9]*$" appProjectIDUniqueValidator #editProjectID="ngModel" [ngClass]="{
                       'is-invalid':
                         editProjectID.invalid &&
