--- a/app/admin/components/store-order-cancelled-transaction/store-order-active-cancelled-transaction.component.html
+++ b/app/admin/components/store-order-cancelled-transaction/store-order-active-cancelled-transaction.component.html
@@ -229,7 +229,7 @@
     <div class="modal-dialog modal-md">
       <div class="modal-content" style="width:auto">
         <div class="modal-header bg-all">
-          <div class="modal-title white-color">Cancel Order Item</div>
+          <div class="modal-title white-color">Return Order Item</div>
           <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
         </div>
         <div class="modal-body">
